Improvements/Fixes/Misc Cleanup: Fixed profit tracker jump & listening to an invalid break block on server join. Added /pet alias for /pets, added pet check to not unequip a pet, added pet close menu after picking pet maybe? Improved petad hologram check logic Fixed /warp not hitting back arrow when T5 uses a page 1 warp
Misc code cleanup throughout the project